[workspace]
members = ["quinn", "quinn-proto", "quinn-udp", "bench", "perf", "fuzz"]
default-members = ["quinn", "quinn-proto", "quinn-udp", "bench", "perf"]

[profile.bench]
debug = true

[profile.release]
debug = true

[profile.release.package."*"]
debug = true

[profile.release.build-override]
debug = true
